fix: issue higlighting text which makes lines too big

--- a/src/components/layout.css
+++ b/src/components/layout.css
@@ -612,6 +612,7 @@ pre tt:after {
   padding: 0;
   padding-left: 2.8em;
   overflow: initial;
+  white-space: pre-wrap;
 }
 @media only screen and (max-width: 480px) {
   html {
